Test_Files/abstract_vm/Error/inf.asm
;     Inf
;   =============
;   Error test 17

push float(99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0)
push int8(6)
dump
mul
dump
pop

push float(99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0)
push int8(6)
dump
add
dump
pop

push float(99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0)
push int8(6)
dump
sub
dump
pop

push float(99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0)
push int8(6)
dump
div
dump
pop

push float(99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0)
push int8(6)
dump
mod
dump
pop

push float(99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0)
push float(99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0)
dump
div
dump
pop

exit
